--- a/assets/pages/sessoes/sessoesdetail.html
+++ b/assets/pages/sessoes/sessoesdetail.html
@@ -11,6 +11,68 @@
                        id="inputNome" placeholder="Nome" ng-model="data.nome" ng-required="true">
             </div>
         </div>
+        <div class="dropdown form-group">
+            <label for="dropdownEvento" class="col-sm-2 control-label">Evento</label>
+
+            <div class="btn-group col-sm-10" dropdown is-open="status.isopen">
+                <button id="dropdownEvento" type="button" class="btn btn-default dropdown-toggle" dropdown-toggle
+                        ng-disabled="disabled">
+                    {{data.evento}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li ng-repeat="um in eventos">
+                        <a ng-click="dropSelected(um)">{{um.nome}}</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="dropdown form-group">
+            <label for="dropdownOrador" class="col-sm-2 control-label">Orador</label>
+
+            <div class="btn-group col-sm-10" dropdown is-open="status.isopen2">
+                <button id="dropdownOrador" type="button" class="btn btn-default dropdown-toggle" dropdown-toggle
+                        ng-disabled="disabled">
+                    {{data.orador}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li ng-repeat="um in oradores">
+                        <a ng-click="dropSelectedSpeaker(um)">{{um.nome}}</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputData" class="col-sm-2 control-label">Data início</label>
+
+            <div class="col-sm-3">
+                <input type="date" class="form-control"
+                       id="inputData" placeholder="Data" ng-model="data.dataInicio" ng-required="true">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputHoraInicio" class="col-sm-2 control-label">Hora Início</label>
+
+            <div class="col-sm-3">
+                <input type="time" class="form-control"
+                       id="inputHoraInicio" placeholder="Data" ng-model="data.dataInicio" ng-required="true">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputHoraFim" class="col-sm-2 control-label">Hora Fim</label>
+
+            <div class="col-sm-3">
+                <input type="time" class="form-control"
+                       id="inputHoraFim" placeholder="Data" ng-model="data.dataFim" ng-required="true">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputTexto" class="col-sm-2 control-label">Detalhe</label>
+
+            <div class="col-sm-10">
+                <textarea id="inputTexto" class="form-control" rows="5" ng-model="data.descricao"
+                          placeholder="Insira detalhe sobre a sessão" required></textarea>
+            </div>
+        </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
     </form>
 
