--- a/assets/pages/participantes/participantesdetail.html
+++ b/assets/pages/participantes/participantesdetail.html
@@ -2,7 +2,7 @@
 <div class="container">
     <h3>Detalhe Participante</h3>
 
-    <form class="form-horizontal" name="criarForm">
+    <form class="form-horizontal col-md-9" name="criarForm">
         <div class="form-group">
             <label for="inputNome" class="col-sm-2 control-label">Nome completo</label>
 
@@ -11,7 +11,23 @@
                        id="inputNome" placeholder="Nome" ng-model="data.nome" ng-required="true">
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Headline</label>
+
+            <div class="col-sm-10">
+                <span>{{data.headline}}</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Perfil Linkedin</label>
+            <a ng-href="{{data.perfilLinkedId}}">{{data.perfilLinkedId}}</a>
+        </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
     </form>
+    <div class=".col-md-3 table-responsive picture">
+        <div class="picture">
+            <img ng-src="{{data.pictureUrl}}" alt="Description"/>
+        </div>
+    </div>
 
 </div>
