--- a/assets/pages/participantes/participantesdetail.html
+++ b/assets/pages/participantes/participantesdetail.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Perfil Linkedin</label>
-            <a ng-href="{{data.perfilLinkedId}}">{{data.perfilLinkedId}}</a>
+            <a ng-href="{{data.perfilLinkedIn}}">{{data.perfilLinkedId}}</a>
         </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
     </form>
