--- a/assets/pages/sessoes/sessoesdetail.html
+++ b/assets/pages/sessoes/sessoesdetail.html
@@ -66,6 +66,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="inputLocal" class="col-sm-2 control-label">Local</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control"
+                       id="inputLocal" placeholder="Local" ng-model="data.local" ng-required="true">
+            </div>
+        </div>
+        <div class="form-group">
             <label for="inputTexto" class="col-sm-2 control-label">Detalhe</label>
 
             <div class="col-sm-10">
