--- a/assets/pages/speakers/speakersdetail.html
+++ b/assets/pages/speakers/speakersdetail.html
@@ -11,6 +11,14 @@
                        id="inputNome" placeholder="Nome" ng-model="data.nome" ng-required="true">
             </div>
         </div>
+        <div class="form-group">
+            <label for="inputHeadline" class="col-sm-2 control-label">Nome</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control"
+                       id="inputHeadline" placeholder="Nome" ng-model="data.headline" ng-required="true">
+            </div>
+        </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
     </form>
 
