--- a/assets/pages/speakers/speakersdetail.html
+++ b/assets/pages/speakers/speakersdetail.html
@@ -19,6 +19,14 @@
                        id="inputHeadline" placeholder="Nome" ng-model="data.headline" ng-required="true">
             </div>
         </div>
+        <div class="form-group">
+            <label for="inputLinkedIn" class="col-sm-2 control-label">Perfil</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control"
+                       id="inputLinkedIn" placeholder="Nome" ng-model="data.linkedIn" ng-required="true">
+            </div>
+        </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
     </form>
 
