--- a/assets/pages/speakers/speakersdetail.html
+++ b/assets/pages/speakers/speakersdetail.html
@@ -24,7 +24,7 @@
 
             <div class="col-sm-10">
                 <input type="text" class="form-control"
-                       id="inputLinkedIn" placeholder="Nome" ng-model="data.linkedIn" ng-required="true">
+                       id="inputLinkedIn" placeholder="Nome" ng-model="data.linkedInProfile" ng-required="true">
             </div>
         </div>
         <button type="submit" class="btn btn-deloitte" ng-click="gravar()">Gravar</button>
