--- a/assets/pages/speakers/speakersdetail.html
+++ b/assets/pages/speakers/speakersdetail.html
@@ -20,6 +20,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="inputCompany" class="col-sm-2 control-label">Empresa</label>
+
+            <div class="col-sm-10">
+                <input type="text" class="form-control"
+                       id="inputCompany" placeholder="Headline" ng-model="data.empresa" ng-required="true">
+            </div>
+        </div>
+        <div class="form-group">
             <label for="inputLinkedIn" class="col-sm-2 control-label">Perfil</label>
 
             <div class="col-sm-10">
@@ -32,7 +40,7 @@
 
             <div class="col-sm-10">
                 <input type="text" class="form-control"
-                       id="inputPictureUrl" placeholder="Fogo" ng-model="data.pictureUrl" ng-required="true">
+                       id="inputPictureUrl" placeholder="Foto" ng-model="data.pictureUrl" ng-required="true">
             </div>
         </div>
         <div class="form-group">
